--- a/index.html
+++ b/index.html
@@ -7,9 +7,21 @@
     <title>contour plots</title>
     <link rel="stylesheet" href="CSSF.css">
     <style>
+        *{
+            margin:0;
+            padding:0;
+            box-sizing:border-box;}
+        
         body {
-            padding: 20px;
+            width:100%;
+            overflow-x:'hidden';
+            padding:10px 0;
             font-family: Arial, sans-serif;
+        }
+        img{
+            width:400px;
+            height:400px;
+            object-fit:'cover';
         }
         </style>
 </head>
